[gd_scene load_steps=2 format=3 uid="uid://cuivp4jpcyy1j"]

[ext_resource type="Script" path="res://ui/GameUI/Tooltip/AbilityTooltipComponent.gd" id="1_caxqg"]

[node name="AbilityTooltipComponent" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 36.0
offset_bottom = 36.0
script = ExtResource("1_caxqg")

[connection signal="mouse_in" from="." to="." method="_on_mouse_in"]
[connection signal="mouse_out" from="." to="." method="_on_mouse_out"]
[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
